[tool.poetry]
name = "reportbro-lib"
version = "3.9.2"
description = "Generate PDF and Excel reports from visually designed templates"
authors = ["jobsta <alex@reportbro.com>"]
license = "AGPL-3.0"
readme = "README.rst"

homepage = "https://www.reportbro.com"
repository = "https://github.com/jobsta/reportbro-lib"
documentation = "https://www.reportbro.com/doc/installation"

keywords = ["pdf", "excel", "report", "generate", "create", "web", "template", "layout"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

packages = [
    { include = "reportbro" },
]

include = ["data/logo_watermark.png"]

[tool.poetry.dependencies]
python = "^3.8"
Babel = "^2.14.0"
python-barcode = "^0.15.1"
reportbro-fpdf2 = "^2.7.5"
# reportbro-fpdf2 = { path = "../fpdf2/", develop = true}
simpleeval = "^0.9.13"
Pillow = "^10.2.0"
qrcode = "^7.4.2"
XlsxWriter = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
